# rsbtc

./: .gitignore  FEEDBACK.md  README.md  template_block.cbor  tx.cbor
lib/: Cargo.toml
lib/src/: crypto.rs  error.rs  lib.rs  network.rs  sha256.rs  types.rs  util.rs  utils.rs
lib/src/types/: block.rs  blockchain.rs  transaction.rs
lib/src/utils/: io.rs  merkle_tree.rs
miner/: Cargo.toml
miner/src/: main.rs
node/: Cargo.toml
node/src/: handler.rs  main.rs  util.rs
wallet/: Cargo.toml
wallet/src/: core.rs  main.rs
wallet/store/: bob.priv.cbor  bob.pub.pem
